force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__CostEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CostEditable__c</fullName>
        <description>Controls whether cost for this product may be modified on individual quotes.</description>
        <inlineHelpText>Controls whether cost for this product may be modified on individual quotes.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>