force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__DefaultQuantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DefaultQuantity__c</fullName>
        <description>Specify the starting quantity of the product when added.</description>
        <inlineHelpText>Specify the starting quantity of the product when added.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </CustomField>