force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Discount schedule for use with this dimension</description>
        <inlineHelpText>Discount schedule for use with this dimension</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <type>Lookup</type>
    </CustomField>