force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__NonDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <description>Marks this dimension as not discountable.</description>
        <inlineHelpText>Marks this dimension as not discountable.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>