force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__NonPartnerDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonPartnerDiscountable__c</fullName>
        <description>Marks this dimension as non-discountable for partners.</description>
        <inlineHelpText>Marks this dimension as non-discountable for partners.</inlineHelpText>
        <label>Non Partner Discountable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>