force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__PriceBook__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates this dimension to a particular Price Book</description>
        <inlineHelpText>Associates this dimension to a particular Price Book</inlineHelpText>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Price_Dimensions</relationshipName>
        <type>Lookup</type>
    </CustomField>