force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__PriceEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceEditable__c</fullName>
        <description>Indicates this dimension allows for price to be freely editable when building a quote.</description>
        <inlineHelpText>Indicates this dimension allows for price to be freely editable when building a quote.</inlineHelpText>
        <label>Price Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>