force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product to which this Price Dimension is associated.</description>
        <inlineHelpText>Select a Product to associate this Price Dimension with.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <type>Lookup</type>
    </CustomField>