force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__QuantityEditable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuantityEditable__c</fullName>
        <description>Flag that determines whether the quantity is editable.</description>
        <inlineHelpText>Allow or prevent changing the quantity for this dimension.</inlineHelpText>
        <label>Quantity Editable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                    <default>true</default>
                    <label>Inherit</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>