force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__QuantityScale__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuantityScale__c</fullName>
        <description>Specifies the number of decimal places used in the Quantity field.</description>
        <inlineHelpText>Specifies the number of decimal places used in the Quantity field.</inlineHelpText>
        <label>Quantity Scale</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>