force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__TermDiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a schedule for discounts based on Subscription Term. Values entered into these fields will override the values entered at the Product level.</description>
        <inlineHelpText>This is a schedule for discounts based on Subscription Term. Values entered into these fields will override the values entered at the Product level.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Price Dimensions (Term Discount Schedule)</relationshipLabel>
        <relationshipName>TermDiscountedDimensions</relationshipName>
        <type>Lookup</type>
    </CustomField>