force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>For multi-dimensional products, the type of Price Dimension: One-Time or Yearly. Yearly Dimensions are always treated as Subscriptions.</description>
        <inlineHelpText>Select the type of Price Dimension: One-Time or Yearly. Yearly Dimensions are always treated as Subscriptions.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year</fullName>
                    <default>true</default>
                    <label>Year</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>One-time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>