force-app/main/default/objects/SBQQ__Dimension__c/fields/SBQQ__UnitPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UnitPrice__c</fullName>
        <description>Unit price for this Dimension. This will override the value from the Price Book.</description>
        <inlineHelpText>Unit price for this Dimension. This will override the value from the Price Book.</inlineHelpText>
        <label>Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>