force-app/main/default/objects/SBQQ__Dimension__c/validationRules/SBQQ__Cannot_Create_PriceDimension_Evergreen.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Cannot_Create_PriceDimension_Evergreen</fullName>
        <active>true</active>
        <description>Cannot create price dimension for evergreen or renewable/evergreen subscription type</description>
        <errorConditionFormula>OR(ISPICKVAL( SBQQ__Product__r.SBQQ__SubscriptionType__c , &#39;Evergreen&#39;),  ISPICKVAL( SBQQ__Product__r.SBQQ__SubscriptionType__c , &#39;Renewable/Evergreen&#39;))</errorConditionFormula>
        <errorMessage>Can’t create MDQ price dimensions for evergreen or renewable/evergreen products.</errorMessage>
    </ValidationRule>